Update the resume

--- a/_posts/2017-11-18-Resume.md
+++ b/_posts/2017-11-18-Resume.md
@@ -19,24 +19,23 @@ tags:
 
 ---
 ### 工作经验
-> **2012年7月~2015年5月 : 华为技术有限公司交换机产品部**  
-> 任职华为数通交换机团队核心开发人员，负责交换机系统层开发工作，主要成果：
+> **2012年7月~2015年5月 : 华为技术有限公司交换机产品部**　　　　(交换机系统层研发工程师)  
+> 任职华为数通交换机团队核心开发人员，负责交换机系统层开发工作。  
+> 主要成果：
 > - 交换机容灾方案（堆叠集群管理）
 > - 业界首创的敏捷架构、虚拟化技术（SVF）方案
   
-> **2015年6月~2017年10月 : 华为技术有限公司云解决方案部**  
-> 任职华为企业级云管理解决方案团队PL:
-> - 负责云管理方案需求分析设计和核心框架开发工作
-> - 负责项目交付，包含团队组建、技术把关和事务管理等  
-
+> **2015年6月~2017年10月 : 华为技术有限公司云解决方案部**　　　　(云管理解决方案团队PL)  
+> 负责云管理方案的需求分析设计和核心框架开发工作  
+> 负责项目交付，包含团队组建、技术把关和事务管理等  
+> 主要成果：  
+> - 敏捷园区公有云解决方案  
 ---
 ### 技能情况
-![](https://github.com/ShoreCN/Resume/blob/master/img/skill1113.jpg?raw=true)  
-
+![](https://github.com/ShoreCN/Resume/blob/master/img/skill1113.jpg?raw=true)
 ---
 ### 个人介绍
 > - 崇尚技术，学习能力强，爱好自我折腾，追求高效率  
 > - 性格沉稳，善于思考，工作认真踏实、精益求精  
 > - 具备良好的团队精神，拒绝个人主义  
-
 
