更新个人介绍
更新个人介绍

--- a/_posts/2018-04-18-高性能服务框架.md
+++ b/_posts/2018-04-18-高性能服务框架.md
@@ -2,9 +2,7 @@
 title: 高性能框架方案
 date: 2018-04-18 09:30:09
 categories:
-- Tornado
-- RabbitMQ
-- Celery
+- 架构
 ---
 
 # 高性能框架方案
@@ -14,13 +12,13 @@ categories:
 - 存储
 
 ## WEB框架
-#### Django
+### Django
 Django是走大而全的方向，注重高效开发，它最出名的是其全自动化的管理后台：只需要使用起ORM，做简单的对象定义，它就能自动生成数据库结构、以及全功能的管理后台。
 
-#### Flask
+### Flask
 轻量级Web应用框架
 
-#### Tornado
+### Tornado
 轻量级web框架，功能少而精，注重性能优越。可以作为HTTP服务器，支持异步编程与WebSocket。
 Tornado采用异步IO，可以轻松达到每秒上千个请求的效率。AIO的思想是当我们在等待结果的时候不阻塞，转而我们给框架一个回调函数作为参数，让框架在收到结果的时候再通过回调函数继续操作。这样，服务器就可以在等待结果的时候被解放去接受其他客户端的请求了。
 
